--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     docs
-    py{38,39,310}-dj{32,41,42}-{sqlite,postgresql,mysql}
+    py{38,310}-dj{32,41,42}-{sqlite,postgresql,mysql}
     py{310,311,312}-dj{32,41,42,50,51}-{sqlite,postgresql,mysql}
     py{312,313}-dj{51,52,main}-{sqlite,postgresql,mysql}
 
@@ -19,6 +19,7 @@ deps =
     pytest
     pytest-django
     pytest-cov
+    django-js-asset
 passenv=
     CI
     DB_BACKEND
@@ -41,19 +42,19 @@ pip_pre = True
 commands =
     pytest {posargs}
 
-[testenv:py{38,39,310,311,312,313}-dj{32,41,42,50,51,52,main}-postgresql]
+[testenv:py{38,310,311,312,313}-dj{32,41,42,50,51,52,main}-postgresql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = postgresql
     DB_PORT = {env:DB_PORT:5432}
 
-[testenv:py{38,39,310,311,312,313}-dj{32,41,42,50,51,52,main}-mysql]
+[testenv:py{38,310,311,312,313}-dj{32,41,42,50,51,52,main}-mysql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = mysql
     DB_PORT = {env:DB_PORT:3306}
 
-[testenv:py{38,39,310,311,312,313}-dj{32,41,42,50,51,52,main}-sqlite]
+[testenv:py{38,310,311,312,313}-dj{32,41,42,50,51,52,main}-sqlite]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = sqlite3
@@ -68,7 +69,6 @@ allowlist_externals = make
 [gh-actions]
 python =
     3.8: py38
-    3.9: py39
     3.10: py310
     3.11: py311
     3.12: py312
